# sentrix

./: .env.example  .gitignore  Makefile  README.md  config.example.yaml  pyproject.toml  pyrightconfig.json  railway.json  test_mock.py  test_mock2.py
.github/workflows/: ci.yml  codeql.yml
data/fixtures/: mock_positions.json
docs/: DEPLOYMENT.md
scripts/: bench.py
src/inj_sentinel/: __init__.py  cli.py  config.py
src/inj_sentinel/clients/: __init__.py  injective.py  llm.py
src/inj_sentinel/core/: __init__.py  analyzer.py  detector.py  poller.py
src/inj_sentinel/delivery/: __init__.py  console.py  discord.py  telegram.py
src/inj_sentinel/models/: __init__.py  alert.py  position.py
src/inj_sentinel/storage/: __init__.py  db.py
src/sentrix/: __init__.py  cli.py  config.py
src/sentrix/clients/: __init__.py  injective.py  llm.py
src/sentrix/core/: __init__.py  analyzer.py  detector.py  poller.py
src/sentrix/delivery/: __init__.py  console.py  discord.py  telegram.py
src/sentrix/models/: __init__.py  alert.py  position.py
src/sentrix/storage/: __init__.py  db.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_db.py  test_delivery_console.py  test_delivery_discord.py  test_delivery_telegram.py  test_detector.py  test_init.py  test_injective.py  test_llm.py  test_models.py  test_poller.py
