[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inj-sentinel"
version = "0.1.0"
description = "AI-powered DeFi position monitor for Injective. Detects liquidation risks, explains them in plain English, alerts via Telegram."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Edy Cu Tjong", email = "edycutjong@gmail.com" },
]
keywords = ["injective", "defi", "trading", "ai", "monitoring", "telegram", "alerts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "injective-py>=1.7.0",
    "openai>=1.0",
    "google-genai>=1.0",
    "python-telegram-bot>=21.0",
    "click>=8.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "rich>=13.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-PyYAML",
    "types-aiofiles",
]

[project.scripts]
inj-sentinel = "inj_sentinel.cli:cli"

[project.urls]
Homepage = "https://github.com/edycutjong/inj-sentinel"
Documentation = "https://github.com/edycutjong/inj-sentinel#readme"
Repository = "https://github.com/edycutjong/inj-sentinel"
Issues = "https://github.com/edycutjong/inj-sentinel/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/inj_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.coverage.run]
source = ["inj_sentinel"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
