[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentrix"
version = "0.1.0"
description = "AI-powered DeFi position monitor for Injective. Detects liquidation risks, explains them in plain English, alerts via Telegram."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Edy Cu Tjong", email = "edy.cu@live.com" },
]
keywords = ["injective", "defi", "trading", "ai", "monitoring", "telegram", "alerts", "sentrix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "injective-py>=1.7.0,<1.12.0",
    "openai>=1.0",
    "google-genai>=1.0",
    "python-telegram-bot>=21.0",
    "click>=8.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "pyyaml>=6.0",
    "rich>=13.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "pyright>=1.1.0",
    "ruff>=0.5",
    "types-PyYAML",
    "types-aiofiles",
]

[project.scripts]
sentrix = "sentrix.cli:cli"

[project.urls]
Homepage = "https://github.com/edycutjong/sentrix"
Documentation = "https://github.com/edycutjong/sentrix#readme"
Repository = "https://github.com/edycutjong/sentrix"
Issues = "https://github.com/edycutjong/sentrix/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sentrix"]
artifacts = ["src/sentrix/py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # CPython 3.11 bug: MagicMock/AsyncMock internal _execute_mock_call
    # creates unawaited coroutines during inspect/GC attribute access.
    # See: https://github.com/python/cpython/issues/100094
    "ignore::RuntimeWarning:asyncio",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "test_mock2"
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["sentrix"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
